--- a/mobile/app.json
+++ b/mobile/app.json
@@ -31,6 +31,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "O aplicativo irá acessar suas fotos para adicionar aos perfis dos pets e seu perfil."
+        }
+      ]
+    ]
   }
 }
