--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,12 +11,14 @@
     "@expo-google-fonts/poppins": "^0.2.0",
     "@expo/vector-icons": "^12.0.5",
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~43.0.2",
     "expo-app-loading": "~1.2.1",
     "expo-font": "~10.0.3",
     "expo-google-app-auth": "~9.0.0",
+    "expo-image-picker": "~11.0.3",
     "expo-status-bar": "~1.1.0",
     "firebase": "^9.6.1",
     "react": "17.0.1",
