--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,8 @@
     "axios": "^0.24.0",
     "expo": "~43.0.2",
     "expo-app-loading": "~1.2.1",
+    "expo-barcode-scanner": "^11.2.0",
+    "expo-camera": "^12.1.0",
     "expo-font": "~10.0.3",
     "expo-google-app-auth": "~9.0.0",
     "expo-image-picker": "~11.0.3",
