--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,8 +19,7 @@
     "axios": "^0.24.0",
     "expo": "~43.0.2",
     "expo-app-loading": "~1.2.1",
-    "expo-barcode-scanner": "^11.2.0",
-    "expo-camera": "^12.1.0",
+    "expo-camera": "^12.0.3",
     "expo-font": "~10.0.3",
     "expo-google-app-auth": "~9.0.0",
     "expo-image-picker": "~11.0.3",
@@ -31,6 +30,7 @@
     "react-native": "0.64.3",
     "react-native-custom-qr-codes-expo": "^2.2.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "^12.1.1",
