--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,13 @@
     "apexcharts": "^3.33.1",
     "axios": "^0.24.0",
     "firebase": "^9.6.3",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
+    "react-leaflet": "^3.2.5",
     "react-qr-code": "^2.0.3",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -32,16 +34,9 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
