--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "port": 5000,
   "dependencies": {
+    "@sentry/react": "^6.18.2",
+    "@sentry/tracing": "^6.18.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
