--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "expo-font": "~10.0.3",
     "expo-google-app-auth": "~9.0.0",
     "expo-image-picker": "~11.0.3",
+    "expo-linking": "^3.0.0",
     "expo-status-bar": "~1.1.0",
     "firebase": "^9.6.1",
     "react": "17.0.1",
