--- a/mobile/app.json
+++ b/mobile/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Cadastra Pet",
     "slug": "cadastrapet",
-    "version": "1.9.0",
+    "version": "1.10.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -18,12 +18,13 @@
     ],
     "ios": {
       "bundleIdentifier": "com.cadastrapet.co",
-      "buildNumber": "1.9.0",
+      "buildNumber": "1.10.0",
       "supportsTablet": true
     },
     "android": {
       "package": "com.cadastrapet.co",
-      "versionCode": 3,
+      "versionCode": 4,
+      "icon": "./assets/icon.png",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#F4F6FF"
