--- a/mobile/package.json
+++ b/mobile/package.json
@@ -37,6 +37,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
+    "react-native-webview": "^11.17.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
