--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "react-indiana-drag-scroll": "^2.1.0",
     "react-leaflet": "^3.2.5",
     "react-qr-code": "^2.0.3",
+    "react-qr-scanner": "^1.0.0-alpha.8",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
