--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set NODE_ENV=development &&react-scripts start",
+    "start:production": "set NODE_ENV=production &&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
