--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "port": 5000,
   "dependencies": {
+    "@headlessui/react": "^1.6.0",
     "@sentry/react": "^6.18.2",
     "@sentry/tracing": "^6.18.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,7 +13,9 @@
     "apexcharts": "^3.33.1",
     "axios": "^0.24.0",
     "firebase": "^9.6.3",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.7.1",
+    "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
