--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
     "react-leaflet": "^3.2.5",
+    "react-player": "^2.10.1",
     "react-qr-code": "^2.0.3",
     "react-qr-scanner": "^1.0.0-alpha.8",
     "react-router-dom": "^6.0.2",
