--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "port": 5000,
   "dependencies": {
     "@headlessui/react": "^1.6.0",
+    "@react-pdf-viewer/core": "3.3.2",
     "@sentry/react": "^6.18.2",
     "@sentry/tracing": "^6.18.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -16,6 +17,7 @@
     "firebase": "^9.6.3",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.7.1",
+    "pdfjs-dist": "2.13.216",
     "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
