--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.33.1",
     "axios": "^0.24.0",
+    "blip-chat-widget": "^1.9.1",
     "dotenv": "^16.0.1",
     "firebase": "^9.6.3",
     "html2canvas": "^1.4.1",
