--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
