--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "app",
   "private": true,
-  "port": 5000,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@headlessui/react": "^1.6.0",
     "@react-pdf-viewer/core": "3.3.2",
@@ -14,16 +19,15 @@
     "apexcharts": "^3.33.1",
     "axios": "^0.24.0",
     "blip-chat-widget": "^1.9.1",
-    "dotenv": "^16.0.1",
     "firebase": "^9.6.3",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.7.1",
     "pdfjs-dist": "2.13.216",
     "phosphor-react": "^1.4.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.3.9",
     "react-datepicker": "^4.8.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
     "react-leaflet": "^3.2.5",
@@ -35,21 +39,11 @@
     "serve": "^13.0.2",
     "web-vitals": "^1.0.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
+    "vite": "^4.0.0",
+    "vite-plugin-mkcert": "^1.11.0"
+  }
 }
