--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.6.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "@mui/x-data-grid": "^5.17.21",
     "@react-pdf-viewer/core": "3.3.2",
     "@sentry/react": "^6.18.2",
     "@sentry/tracing": "^6.18.2",
@@ -22,10 +23,11 @@
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.33.1",
     "axios": "^0.24.0",
+    "dayjs": "^1.11.7",
     "firebase": "^9.6.3",
     "formik": "^2.2.9",
     "html2canvas": "^1.4.1",
-    "leaflet": "^1.7.1",
+    "leaflet": "^1.9.3",
     "pdfjs-dist": "2.13.216",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -34,7 +36,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
-    "react-leaflet": "^3.2.5",
+    "react-leaflet": "^4.2.0",
     "react-player": "^2.10.1",
     "react-qr-code": "^2.0.3",
     "react-qr-scanner": "^1.0.0-alpha.8",
