--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
     "@mui/x-data-grid": "^5.17.21",
+    "@mui/x-date-pickers": "^5.0.16",
     "@react-pdf-viewer/core": "3.3.2",
     "@sentry/react": "^6.18.2",
     "@sentry/tracing": "^6.18.2",
