--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "serve": "^13.0.2",
+    "swiper": "^9.0.5",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
